[project]
name = "Guess The Number"
version = "1.2.0-rc.2"
description = "pygame"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["README.md:version v{version}:tf"]
commit_parser = "conventional"


[tool.semantic_release.branches.main]
match = "master"
prerelease = false


[tool.semantic_release.branches.release]
match = "release/.*"
prerelease = true
prerelease_token = "rc"
